Avance de backend de Equipo, Coche y Piloto